# axum-tutorial

./: Cargo.toml
data/: .env  Cargo.toml
data/src/: docker-compose.yml  lib.rs  main.rs
data/src/database/: tasks.rs  users.rs
data/src/routes/: get_task.rs  mod.rs  partial_update_tasks.rs  update_task.rs
src/: lib.rs  main.rs
src/routes/: always_errors.rs  custom_json_extractor.rs  get_json.rs  hello_world.rs  middleware_message.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_user_agents.rs  mod.rs  path_variable.rs  query_params.rs  read_middleware_custom_header.rs  return_201.rs  set_middleware_custom_header.rs  validate_with_serde.rs
