[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.21"
sea-orm = { version = "0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.203", features = ["derive"] }
